// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserComments  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 0.1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#900",
          "fontSize": 30,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginLeft": 9,
        "marginTop": -60,
        "minHeight": 40,
      }
    }
  >
    <TextInput
      onChangeText={[Function]}
      placeholder="Comment here ..."
      style={
        Object {
          "backgroundColor": "#fff",
          "borderColor": "#fff",
          "borderWidth": 1,
          "marginHorizontal": 0,
          "padding": 10,
          "width": "70%",
        }
      }
      value=""
    />
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Post
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserComments empty images  1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": "#900",
            "fontSize": 30,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginLeft": 9,
          "marginTop": -60,
          "minHeight": 40,
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Comment here ..."
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#fff",
            "borderWidth": 1,
            "marginHorizontal": 0,
            "padding": 10,
            "width": "70%",
          }
        }
        value=""
      />
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Post
          </Text>
        </View>
      </View>
    </View>
  </View>,
  ",",
]
`;

exports[`UserComments with images  1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": "#900",
            "fontSize": 30,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginLeft": 9,
          "marginTop": -60,
          "minHeight": 40,
        }
      }
    >
      <TextInput
        onChangeText={[Function]}
        placeholder="Comment here ..."
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#fff",
            "borderWidth": 1,
            "marginHorizontal": 0,
            "padding": 10,
            "width": "70%",
          }
        }
        value=""
      />
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Post
          </Text>
        </View>
      </View>
    </View>
  </View>,
  ",",
]
`;
